src/objects/Box_Emails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Addresses__c</fullName>
        <label>Addresses</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient01__c</fullName>
        <label>Recipient01</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient02__c</fullName>
        <label>Recipient02</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient03__c</fullName>
        <label>Recipient03</label>
        <type>Email</type>
    </fields>
    <label>Box Emails</label>
</CustomObject>